# thunderstore-discord-bot

./: .env.template  Dockerfile  main.py  pyproject.toml
thunderbot/: main.py
thunderbot/commands/: deprecate.py  errorhandler.py  modSearch.py  reload.py  thunderstore.py
thunderbot/tools/: settings.py  stringDecode.py
